src/objects/Choice__c.object
<CustomObject>
    <description>Choices available for the exam questions.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the correct answer among the available choices.</description>
        <label>Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Choice__c</fullName>
        <label>Choice</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_ID__c</fullName>
        <label>Question_ID</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Choices</relationshipLabel>
        <relationshipName>Choices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Choice</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Choice_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>